Added public key

--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
     </nav>
     {% block content %}{% endblock %}
     <footer>
-        <p>&copy; 2020 ajs</p>
+        <p>&copy; 2020 ajs &middot; <a href="feed.xml">rss</a></p>
     </footer>
 </body>
 </html>
