--- a/templates/base.html
+++ b/templates/base.html
@@ -17,12 +17,12 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="essays.html">Essays</a></li>
+            <li><a href="notes.html">Notes</a></li>
         </ul>
     </nav>
     {% block content %}{% endblock %}
     <footer>
-        <p>&copy; 2020 ajs &middot; <a href="feed.xml">rss</a></p>
+        <p>&copy; 2021 ajs &middot; <a href="feed.xml">rss</a></p>
     </footer>
 </body>
 </html>
