--- a/templates/base.html
+++ b/templates/base.html
@@ -24,5 +24,25 @@
     <footer>
         <p>&copy; 2021 ajs &middot; <a href="feed.xml">rss</a></p>
     </footer>
+
+    <button class="btn-toggle">Dark Mode</button>
+    <script>
+        const btn = document.querySelector(".btn-toggle");
+
+        const currentTheme = localStorage.getItem("theme");
+        if (currentTheme == "dark") {
+            document.body.classList.add("dark-mode");
+        }
+
+        btn.addEventListener("click", function () {
+            document.body.classList.toggle("dark-mode");
+
+            let theme = "light";
+            if (document.body.classList.contains("dark-mode")) {
+                theme = "dark";
+            }
+            localStorage.setItem("theme", theme);
+        });
+    </script>
 </body>
 </html>
