--- a/templates/base.html
+++ b/templates/base.html
@@ -25,13 +25,16 @@
         <p>&copy; 2021 ajs &middot; <a href="feed.xml">rss</a></p>
     </footer>
 
-    <button class="btn-toggle">Dark Mode</button>
+    <button class="btn-toggle"></button>
     <script>
         const btn = document.querySelector(".btn-toggle");
 
         const currentTheme = localStorage.getItem("theme");
         if (currentTheme == "dark") {
             document.body.classList.add("dark-mode");
+            btn.innerHTML = "Light Mode";
+        } else {
+            btn.innerHTML = "Dark Mode";
         }
 
         btn.addEventListener("click", function () {
@@ -40,6 +43,9 @@
             let theme = "light";
             if (document.body.classList.contains("dark-mode")) {
                 theme = "dark";
+                btn.innerHTML = "Light Mode";
+            } else {
+                btn.innerHTML = "Dark Mode";
             }
             localStorage.setItem("theme", theme);
         });
