--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,4 @@
-{% extends 'templates/base.html' %}
-{% block title %}Home{% endblock %}
+{% extends 'base.html' %}
 {% block content %}
     <section>
         <p>Hi, my name is Alec. I'm a technology enthusiast who also likes to take a step back from the screen to consider how to be a better human and what makes life meaningful.</p>
