--- a/templates/books.html
+++ b/templates/books.html
@@ -11,15 +11,40 @@
         {%- endfor %}
         </ul>
 
-        <h3>Read</h3>
-        <ul>
+        <h3>Read <small>sort by <button class="btn-author" onclick="sortList('author')">author</button>, <button class="btn-rating" onclick="sortList('rating')">rating</button>, or <button class="btn-title" onclick="sortList('title')">title</button></small></h3>
+        <ul id="books">
         {%- for book in books_read %}
             {%- if book.review_link == '' %}
-            <li><em>{{ book.title }}</em> by {{ book.author_firstname }} {{ book.author_lastname }} <strong>({{ book.rating }}/10)</strong></li>
+            <li><span class="book-title">{{ book.title }}</span> by {{ book.author_firstname }} <span class="book-author">{{ book.author_lastname }}</span> <span class="book-rating">({{ book.rating }}/10)</span></li>
             {%- else %}
-            <li><em>{{ book.title }}</em> by {{ book.author_firstname }} {{ book.author_lastname }} <strong>({{ book.rating }}/10)</strong> &mdash; <a href="{{ book.review_link }}">review</a></li>
+            <li><span class="book-title">{{ book.title }}</span> by {{ book.author_firstname }} <span class="book-author">{{ book.author_lastname }}</span> <span class="book-rating">({{ book.rating }}/10)</span> &mdash; <a href="{{ book.review_link }}">review</a></li>
             {%- endif %}
         {%- endfor %}
         </ul>
+        <script>
+            // Adapted from https://www.w3schools.com/howto/howto_js_sort_list.asp
+            function sortList(sortOn) {
+                var list, i, switching, b, shouldSwitch;
+                list = document.getElementById("books");
+                switching = true;
+
+                while (switching) {
+                    switching = false;
+                    b = list.getElementsByTagName("LI");
+
+                    for (i = 0; i < (b.length - 1); i++) {
+                        shouldSwitch = false;
+                        if (b[i].getElementsByClassName('book-' + sortOn)[0].innerHTML.toLowerCase() > b[i + 1].getElementsByClassName('book-' + sortOn)[0].innerHTML.toLowerCase()) {
+                            shouldSwitch = true;
+                            break;
+                        }
+                    }
+                    if (shouldSwitch) {
+                        b[i].parentNode.insertBefore(b[i + 1], b[i]);
+                        switching = true;
+                    }
+                }
+            }
+        </script>
     </section>
 {% endblock %}
