Small changes to books

--- a/site/stylesheet.css
+++ b/site/stylesheet.css
@@ -99,7 +99,7 @@ td time {
     margin: 0;
     padding: 0;
     cursor: pointer;
-    font-size: 16px;
+    font-size: 1.125rem;
     color: #cc5500;
 }
 
