--- a/templates/books.html
+++ b/templates/books.html
@@ -11,7 +11,8 @@
         {%- endfor %}
         </ul>
 
-        <h3>Read <small>sort by <button class="btn-author" onclick="sortList('author')">author</button>, <button class="btn-rating" onclick="sortList('rating')">rating</button>, or <button class="btn-title" onclick="sortList('title')">title</button></small></h3>
+        <h3>Read</h3>
+        <p>Sort by <button class="btn-author" onclick="sortList('author')">author</button>, <button class="btn-rating" onclick="sortList('rating')">rating</button>, or <button class="btn-title" onclick="sortList('title')">title</button>.</p>
         <ul id="books">
         {%- for book in books_read %}
             {%- if book.review_link == '' %}
